[tool.poetry]
name = "pregex"
version = "0.3.0"
description = "Regex with structural pattern matching"
authors = ["Hieuzest <girkirin@hotmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Hieuzest/pregex"
keywords = ["regex", "pattern", "match"]
packages = [
    { include = "pregex.py" }
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"